src/pages/Result/Result.style.scss
.result-title {
	display: grid;
	grid-template-columns: 1fr auto;
}

.result-questions {
	margin-top: 2rem;
	margin-left: 4.2rem;
	display: flex;
	flex-direction: column;
	gap: 1rem;

	&__answers {
		display: flex;
		flex-direction: column;
		gap: 1rem;
		margin-left: 1rem;
	}
}

